fixed nav broken because of overflow and no scroll

--- a/cafesys/media/css/baljan.css
+++ b/cafesys/media/css/baljan.css
@@ -479,7 +479,3 @@ body.become-worker .toggle-request {
     padding: 0 !important;
     text-align: right;
 }
-
-body.group .quick-nav {
-    position: fixed;
-}
